# blackengine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  blackEngine.pro  blcubemesh.cpp  blcubemesh.h  conanfile.txt  diffuseshader.cpp  diffuseshader.h  main.cpp
CMake/: Libraries.cmake  Platform.cmake
cmake/: FindGLFW.cmake  Functions.cmake  Libraries.cmake  Platform.cmake  SetMainTargetSettings.cmake  Version.cmake
docs/: CODESTYLE.md
editor/: .gitignore  CMakeLists.txt  README.md  TODO.md  conanfile.txt
editor/resources/: dog.mtl
editor/resources/spider/: spider.mtl
editor/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderwindow.cpp  renderwindow.h
editor/src/common/: Util.cpp  Util.h
editor/src/editor/: MaskedShader.cpp  MaskedShader.h  Scene.cpp  Scene.h  SelectableGameObject.h  SelectedShader.cpp  SelectedShader.h
editor/src/widgets/: ContextInfoWidget.cpp  ContextInfoWidget.h  LightSettingsWidget.cpp  LightSettingsWidget.h  ObjectInfoWidget.cpp  ObjectInfoWidget.h  PerformanceInfoWidget.cpp  PerformanceInfoWidget.h  Vector3DEditWidget.cpp  Vector3DEditWidget.h  context_info.ui
examples/: CMakeLists.txt  SetupExample.cmake
examples/SimpleApplication/: CMakeLists.txt
examples/SimpleApplication/resources/: book.bmf  simple.frag  simple.shader  simple.vert
examples/SimpleApplication/src/: ExampleApplication.cpp  ExampleApplication.h  Player.cpp  Player.h  main.cpp
examples/simple/: CMakeLists.txt
examples/simple/models/: cottage_obj.mtl  cube.mtl
examples/simple/shaders/: masked_fragment.glsl  selected_fragment.glsl  selected_vertex.glsl  simple_fragment.glsl  simple_vertex.glsl
examples/simple/src/: SelectableGameObject.h  SelectedShader.cpp  SelectedShader.h  main.cpp
forms/: blmainwindow.ui
libs/tinyobj/: tiny_obj_loader.h
plugins/: AddPlugin.cmake  CMakeLists.txt
plugins/core/: CMakeLists.txt
plugins/core/src/: BlackModelParser.cpp  BlackModelParser.h  CorePlugin.cpp  CorePlugin.h  FBXModelParser.cpp  FBXModelParser.h  FPSCamera.cpp  FPSCamera.h  SimpleScene.cpp  SimpleScene.h  SpectatorCamera.cpp  SpectatorCamera.h  main.cpp
plugins/core/src/ui/: GlfwWindowFactory.cpp  glfwWindow.cpp  glfwWindow.h  glfwWindowFactory.cpp  glfwWindowFactory.h  wxWindow.h
plugins/gl/: CMakeLists.txt
plugins/gl/shaders/: simple_fragment.glsl
plugins/gl/src/: GLMesh.cpp  GLMesh.h  GLPlugin.cpp  GLPlugin.h  GLRenderer.cpp  GLRenderer.h  GLSLShader.cpp  GLSLShader.h  GLSLShaderProgram.cpp  GLSLShaderProgram.h  GLTexture.cpp  GLTexture.h  OpenGLCommonHeaders.h  OpenGLRenderSystem.cpp  OpenGLRenderSystem.h  main.cpp
plugins/glrender/: CMakeLists.txt
plugins/glrender/src/: GLRenderPlugin.cpp  GLRenderPlugin.h  main.cpp
plugins/glrenderer/: CMakeLists.txt
plugins/glrenderer/src/: GLContext.cpp  GLContext.h  GLFWWindow.cpp  GLFWWindow.h  GLIncludes.h  GLMesh.cpp  GLMesh.h  GLRenderer.cpp  GLRenderer.h  GLRendererPlugin.cpp  GLRendererPlugin.h  GLTexture.cpp  GLTexture.h  GLWindow.cpp  GLWindow.h  main.cpp
plugins/glrenderer/src/glad/include/glad/: glad.h
plugins/glrenderer/src/glad/src/: glad.c
plugins/glrenderer/src/glsl/: GLSLShader.cpp  GLSLShader.h  GLSLShaderProgram.cpp  GLSLShaderProgram.h
plugins/glrenderer/src/glsl/shaders/: sprite.shader  sprite.vert  static.frag  terrain.shader
plugins/modelParsers/src/: ModelParsersPlugin.cpp  ModelParsersPlugin.h  main.cpp
resources/materials/: testmaterial.mtl
src/: mesh.cpp  mesh.h
src/BlackEngine/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Exported.h  GameObject.cpp  GameObject.h  Image.cpp  Image.h  Light.cpp  Light.h  RayCaster.h  SystemInterface.h
src/BlackEngine/application/: AbstractApplication.cpp  AbstractApplication.h  GameApplication.cpp  GameApplication.h
src/BlackEngine/camera/: Camera.cpp  Camera.h  CameraFactory.h  ObjectCamera.cpp  ObjectCamera.h  RTSCamera.cpp  RTSCamera.h
src/BlackEngine/common/: Bounded.h  Color.cpp  Color.h  CommonHeaders.h  Constants.h  PlatformHeaders.h  Types.h
src/BlackEngine/components/: BoundingComponent.cpp  BoundingComponent.h  BoundingShapes.cpp  BoundingShapes.h  Component.cpp  Component.h  ComponentsContainer.cpp  ComponentsContainer.h  LightComponent.cpp  LightComponent.h  ModelComponent.cpp  ModelComponent.h  TerrainComponent.cpp  TerrainComponent.h  TransformComponent.h
src/BlackEngine/exceptions/: Exception.h
src/BlackEngine/input/: InputSystemInterface.h  KeyboardEventEmitter.h  KeyboardEventListener.h  KeyboardEventPublisher.cpp  KeyboardEventPublisher.h  KeyboardEventSubscriber.h  Mouse.h  MouseEventEmitter.h  MouseEventPublisher.cpp  MouseEventPublisher.h  MouseEventSubscriber.h
src/BlackEngine/log/: Formatters.cpp  Formatters.h  Logger.h
src/BlackEngine/performance/: PerformanceCounter.cpp  PerformanceCounter.h
src/config/: Config.h.in  config.h  config.h.in
src/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Color.cpp  Color.h  CommonHeaders.h  Config.h  Constants.h  Copyable.h  Core.cpp  Core.h  Engine.cpp  Engine.h  Exception.h  Exported.h  FileUtils.cpp  FileUtils.h  GameEntity.cpp  GameEntity.h  GameObject.cpp  GameObject.h  Image.cpp  Image.h  InputKey.h  Logger.cpp  Logger.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PlatformHeaders.h  Plugin.h  PluginManager.cpp  PluginManager.h  RayCaster.cpp  SharedLibrary.cpp  SharedLibrary.h  (+40 more)
src/examples/: CMakeLists.txt  SetupExample.cmake
src/plugin/: CorePlugin.cpp  CorePlugin.h
src/plugins/: CMakeLists.txt  SetupPlugin.cmake
src/plugins/qt/: CMakeLists.txt
src/plugins/qt/src/: QtWindow.cpp  QtWindow.h  QtWindowImpl.cpp  QtWindowImpl.h
src/shaders/: diffuse.frag  diffuse.vert  simple_fragment.frag  simple_vertex.vert
src/utils/: blcubemesh.cpp  blcubemesh.h  bllight.cpp  bllight.h  bllogger.cpp  bllogger.h  blmtlparser.cpp  blmtlparser.h  blobjectcamera.cpp  blobjectcamera.h  blobjparser.cpp  blobjparser.h  blspectatorcamera.cpp  blspectatorcamera.h  bltimer.h  ivertex.cpp  ivertex.h  utils.pri  vertexcolorpos.cpp  vertexcolorpos.h  vertexpos.cpp  vertexpos.h
(+228 files in other folders)
